Nuevo script auto host

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "sass public/campus/posgrados:public/campus/posgrados --no-source-map --style compressed",
     "watch": "sass --watch public/campus/posgrados:public/campus/posgrados --no-source-map --style compressed",
-    "all": "node server.js & sass --watch campus/posgrados:campus/posgrados --no-source-map --style compressed"
+    "all": "node server.js & sass --watch public/campus/posgrados:public/campus/posgrados --no-source-map --style compressed"
   },
   "keywords": [],
   "author": "",
